--- a/Kontakt.html
+++ b/Kontakt.html
@@ -10,10 +10,10 @@
 <!-- Save for Web Slices (Bez nazwy-2) -->
 <div class="Tabela_01">
 	<div class="Kontakt-01_">
-		<img id="Kontakt_01" src="images/Kontakt_01.gif" width="433" height="114" alt="" />
+		<img id="Kontakt_01" src="Kontakt_01.gif" width="433" height="114" alt="" />
 	</div>
 	<div class="Kontakt-02_">
-		<img id="Kontakt_02" src="images/Kontakt_02.gif" width="1063" height="114" alt="" />
+		<img id="Kontakt_02" src="Kontakt_02.gif" width="1063" height="114" alt="" />
 		<div class="strona_glowna"> <a href="stronaglowna.html">Strona Główna</a></div>
 		<div class="aktualnosci"> <a href="aktualnosci.html">Aktualności</a></div>
 		<div class="dziennik"> <a href="https://portal.librus.pl/">Dziennik</a></div>
@@ -22,10 +22,10 @@
 	</div>
 	</div>
 	<div class="Kontakt-03_">
-		<img id="Kontakt_03" src="images/Kontakt_03.gif" width="424" height="114" alt="" />
+		<img id="Kontakt_03" src="Kontakt_03.gif" width="424" height="114" alt="" />
 	</div>
 	<div class="Kontakt-04_">
-		<img id="Kontakt_04" src="images/Kontakt_04.gif" width="1920" height="847" alt="" />
+		<img id="Kontakt_04" src="Kontakt_04.gif" width="1920" height="847" alt="" />
 		<div class="kontakt">
 			<p>
 				Szkoła Podstawowa im. Ludwiki Jakubowicz
@@ -51,7 +51,7 @@ Internet: https://www.spostrowite.pl
 		</div>
 	</div>
 	<div class="Kontakt-05_">
-		<img id="Kontakt_05" src="images/Kontakt_05.gif" width="1920" height="119" alt="" />\
+		<img id="Kontakt_05" src="Kontakt_05.gif" width="1920" height="119" alt="" />\
 		<div class="footer">
 			<p>Szkoła Podstawowa nr 11 z Oddziałami Integracyjnymi im. Tadeusza Kościuszki w Katowicach</p>
 			
